...
class CuentasPantalla extends ConsumerWidget {
  const CuentasPantalla({super.key});
  @override
  Widget build(BuildContext context, WidgetRef ref) => Scaffold(
    appBar: AppBar(
      leading: const VolverBro(),
      title: const Text('Tus cuentas'),
    ),
    body: ListView(
      padding: const EdgeInsets.all(20),
      children: [
        ref
            .watch(cuentasProvider)
...
